# noverterm

./: .drone.yml  .editorconfig  .gitignore  .prettierignore  .tool-versions  CLAUDE.md  Cargo.toml  DESIGN-PRINCIPLES.md  DESIGN.md  LICENSE  Makefile.toml  README.md  components.json  eslint.config.js  opencode.json  package-lock.json  package.json  prettier.config.js  svelte.config.js  vite.config.js  vite.config.ts
.claude/commands/: bcp.md
.claude/skills/api-coder/: SKILL.md
.claude/skills/auto-commit/: SKILL.md
.claude/skills/axum-coder/: SKILL.md
.claude/skills/axum-coder/references/: anti-patterns.md  extractors.md  middleware-state.md  responses-errors.md  routing.md  testing-verification.md
.claude/skills/claude-md-organizer/: SKILL.md
.claude/skills/create-pr/: SKILL.md
.claude/skills/diesel-migration/: SKILL.md
.claude/skills/diesel-migration/references/: migration-patterns.md  model-structs.md  (+2 more)
.claude/skills/flutter-coder/: SKILL.md
.claude/skills/pen-design-reader/: SKILL.md
.claude/skills/rust-coder/: SKILL.md
.claude/skills/svelte-coder/: SKILL.md
.claude/skills/tauri-coder/: SKILL.md
.claude/skills/typescript-coder/: SKILL.md
.github/workflows/: ci.yml  release.yml
dev-containers/: docker-compose.yml
dev-containers/postgres/: Dockerfile  create-postgres-databases.sh
docs/: database-api-spec.md  index.html  robots.txt  sitemap.xml
scripts/: start-ms.sh  stop-ms.sh
src/: App.tsx  app.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial.sql
src-tauri/migrations/00000000000000_create_users/: up.sql
src-tauri/src/: config.rs  db.rs  db_commands.rs  lib.rs  main.rs  models.rs  schema.rs
src-tauri/src/db/: mod.rs  models.rs  repository.rs
src-tauri/src/models/: mod.rs  setting.rs  user.rs
src-tauri/src/terminal/: mod.rs  pty.rs  renderer.rs
src/components/: TerminalCanvas.tsx  sidebar.tsx  ssh-card.tsx
src/components/keys/: KeyCard.tsx  KeyDialog.tsx  KeyList.tsx  key-dialog.tsx  key-list.tsx
src/components/layout/: Sidebar.tsx  right-panel.tsx  top-bar.tsx
src/components/portforward/: PortForwardList.tsx  port-forward-dialog.tsx  port-forward-list.tsx
src/components/sessions/: SessionDialog.tsx  session-card.tsx  session-dialog.tsx  session-list.tsx
src/components/ui/: empty-state.tsx  form.tsx  select.tsx  tooltip.tsx
src/lib/: db.ts  mappers.ts  stores.ts  types.ts
src/lib/db/: index.ts
src/routes/: +page.svelte
(+45 files in other folders)
